--- a/CARROSSEL PROF APARECIDA ONLINE.html
+++ b/CARROSSEL PROF APARECIDA ONLINE.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Meu Carrossel</title>
+  <title>Carrossel Prof Aparecida</title>
   <!-- Inclua o Bootstrap -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
@@ -12,14 +12,14 @@
   <div id="meu-carrossel" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="https://via.placeholder.com/800x400?text=Imagem%201" class="d-block w-100" alt="Imagem 1">
+        <img src="imagem1.jpg" class="d-block w-100" alt="Imagem 1">
       </div>
       <div class="carousel-item">
-        <img src="https://via.placeholder.com/800x400?text=Imagem%202" class="d-block w-100" alt="Imagem 2">
+        <img src="imagem2.jpg" class="d-block w-100" alt="Imagem 2">
       </div>
       <div class="carousel-item">
-        <img src="https://via.placeholder.com/800x400?text=Imagem%203" class="d-block w-100" alt="Imagem 3">
-      </div>
+        <img src="imagem3.jpg" class="d-block w-100" alt="Imagem 3">
+      </div>      
     </div>
     <a class="carousel-control-prev" href="#meu-carrossel" role="button" data-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -41,4 +41,8 @@
       // Inicia o carrossel com intervalo de 5 segundos
       $('#meu-carrossel').carousel({
         interval: 5000
-     
+      });
+    });
+  </script>
+</body>
+</html>
